--- a/asset/css/contact.css
+++ b/asset/css/contact.css
@@ -212,6 +212,7 @@ button {
     width: 60rem;
 }
 
+/* MQ 768px*/
 @media screen AND (max-width: 768px) {
     .phone-numbers, .form, .subject, .message,.find-us, .maps {
         display: flex;
@@ -267,7 +268,65 @@ button {
         height: 1rem;
         width: 23rem;
     }
-}   
+}
+
+/* MQ 576px*/
+@media screen AND (max-width: 576px) {
+    .phone-numbers, .form, .subject, .message,.find-us, .maps {
+        display: flex;
+        flex-direction: column;
+        width: 51rem;
+    } 
+    .other-request{
+        display: flex;
+        flex-direction: column;
+        width: 33rem;
+    }    
+
+    .wallpaper {
+        display: flex;
+        flex-direction: column;
+    }
+    
+    input {
+        height: 2rem;
+        width: 15rem;
+    }
+
+    .subject, #subject-select {
+        height: 2rem;
+        width: 16rem;
+        margin-top: 1%;
+        padding-top: 1%;
+        padding-bottom: 1%;
+    }
+
+    #message {
+        box-sizing: content-box;
+        margin-top: 5%;    
+        height:15rem ;
+        width: 16rem ;          
+    }
+
+    .maps iframe {
+        height: 17rem;
+        width: 17rem;
+    }
+
+    .find-us {
+        width: 25rem;
+    }
+
+    .fields {
+        height: 1rem;
+        width: 10rem;
+    }
+
+    .rgpd {
+        height: 1rem;
+        width: 23rem;
+    }
+} 
 
 
    
