--- a/asset/css/authentification.css
+++ b/asset/css/authentification.css
@@ -95,13 +95,16 @@ body{
     background-image: linear-gradient( green , white);
 }
 form{
-    width: 40%;
-    height: auto;
+    width: 50%;
+    height: 360px;
     margin-top: 5%;
     border-radius: 10px;
     box-shadow: 0 10px 20px white;
     background-color: rgba(0,0,0,0,3);
     overflow: hidden;
+    margin-top: 5rem;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 h2{
     text-align: center;
@@ -111,7 +114,8 @@ h2{
     border-bottom: 1px solid white;
 }
 .container{
-    padding: 16px;
+    padding: 40px;
+   
 }
 input[type=text] , input[type=password]{
     width: 100%;
@@ -120,6 +124,7 @@ input[type=text] , input[type=password]{
     box-sizing: border-box;
     background-color:#fff;
     border: 1px solid #fff;
+    border-radius: 5px;
 }
 input[type=text]:focus, input[type =password]:focus{
     outline:none;
@@ -141,12 +146,11 @@ input[type=text]:focus, input[type =password]:focus{
     font-weight: bold;
     width: 100%;
     margin: 12px 0px;
-    text-transform: uppercase;
     background-color:#fdfffd;
     border:none;
     cursor:pointer;
-    transition: 0.3;
     color: black;
+    border-radius: 5px;
 }
 #login-btn:hover{
     background-image: linear-gradient();
@@ -176,9 +180,6 @@ input[type=text]:focus, input[type =password]:focus{
     height: 100%;
     
 }
-form{
-    margin-top: 3rem;
-} 
 
 
 
