--- a/asset/css/contact.css
+++ b/asset/css/contact.css
@@ -61,14 +61,14 @@ header {
     padding: 0.675rem;
 }
 
-#check, .checkbtn {
+#check, .checkbtn {     /* disparition menu */
     display: none;
     cursor: pointer;
 }
 
 @media all and (max-width: 768px) {
     
-    .checkbtn {
+    .checkbtn {         /* apparition menu burger*/
         display: block;
         font-size: 30px;
         padding-right: 0.675rem;
