--- a/asset/css/sell.css
+++ b/asset/css/sell.css
@@ -139,7 +139,7 @@ header {
         display: block;
         width: 100%;
         height: 100vh;
-        left: -100%;
+        right: -100%;
         text-align: center;
         z-index: 1;
         background: var(--main-color);
@@ -163,7 +163,7 @@ header {
     }
 
     .active {
-        left: 0;
+        right: 0;
     }
 
     .menu, .active, #menu-opener, #menu-closer, .logo-mon-compte {
