--- a/asset/css/index.css
+++ b/asset/css/index.css
@@ -122,19 +122,19 @@ a:hover {
     margin-right: 0.5rem;
 }
 
-form input {
+#search_form input {
     border: #1f1f1f 1px solid;
 }
 
-form select {
+#search_form select {
     border: #1f1f1f 1px solid;
 }
 
-form.submitted input:invalid {
+#search_form.submitted input:invalid {
     border: red 1px solid; 
 }
 
-form.submitted select:invalid {
+#search_form.submitted select:invalid {
     border: red 1px solid; 
 }
 
@@ -1121,6 +1121,15 @@ i[class="fa-solid fa-bed"] {
     }
 
     /*burger menu*/
+    /*#nav {
+        transition: top 0.3s;
+        transition-delay: 0.2s;
+      }*/
+
+      #nav.hidden {
+        top: 0;
+      }
+
     #menu_burger {
         display: block;
         margin-right: 0.5rem;
@@ -1147,7 +1156,7 @@ i[class="fa-solid fa-bed"] {
     nav ul {
         flex-direction: column;
         margin-left: 0;
-        position: fixed;
+        position: absolute;
         left: -100%;
         right: 0;
         top: 2.9rem;
@@ -1199,6 +1208,10 @@ i[class="fa-solid fa-bed"] {
 
     .search {
         background-color: inherit;
+    }
+
+    #search_form {
+        display: inherit;
     }
 
     .menu_search {
