--- a/asset/css/rent.css
+++ b/asset/css/rent.css
@@ -343,7 +343,7 @@ select {
             right: 6%;
         }
          
-        .logo-mon-compte {
+        /*.logo-mon-compte {
             display: none;
         }
 
@@ -351,7 +351,7 @@ select {
             display: contents;
         }
 
-        /*nav {
+        nav {
             display: none;
         }*/
 
