--- a/asset/css/rent.css
+++ b/asset/css/rent.css
@@ -100,6 +100,7 @@ main {
 h1 {
     background-color:#b1f3bc60 ;
     border-radius: 0.675rem;
+    text-align: center;
 }
 .backpict {
     position: relative;
