--- a/asset/css/aboutus.css
+++ b/asset/css/aboutus.css
@@ -7,12 +7,12 @@
 
 @font-face {
     font-family: "Baloo 2" ;
-    src: url("../fonts-family/Baloo2-Regular.ttf");
+    src: url("../fonts/Baloo2-Medium.ttf");
 }
 
 @font-face {
     font-family: "Open Sans";
-    src: url("../fonts-family/OpenSans/OpenSans-Regular.ttf");
+    src: url("../fonts/OpenSans/OpenSans-Regular.ttf");
 }
 
 
