--- a/asset/css/sell.css
+++ b/asset/css/sell.css
@@ -16,12 +16,12 @@
 @font-face {
     font-family: "baloo2";
     src: 
-        url("../fonts-family/Baloo2-Medium.ttf") format(truetype);
+        url("../../fonts/Baloo_2/static/Baloo2-Medium.ttf") format(truetype);
 }
 
 @font-face {
     font-family: "opensans";
-    src: url("../fonts-family/OpenSans/OpenSans-Regular.ttf") format(truetype);
+    src: url("../../fonts/Open_Sans/static/OpenSans-Regular.ttf") format(truetype);
 }
 
 
