--- a/asset/css/to_manage.css
+++ b/asset/css/to_manage.css
@@ -249,7 +249,7 @@ h2 {
 
 
 
-@media screen and (max-width: 1919px) {
+/* @media screen and (max-width: 1919px) {
     .bloc_article {
         flex-direction: column;
     }
