--- a/asset/css/index.css
+++ b/asset/css/index.css
@@ -1,3 +1,9 @@
+@font-face {
+    font-family: "baloo2";
+    src: 
+        url("../../fonts/Baloo_2/static/Baloo2-Medium.ttf") format(truetype);
+}
+
 body {
     margin: 0 0;
     width:100%;
@@ -23,7 +29,7 @@ a {
 }
 
 /*header : logo et menu*/
-header a {
+/*header a {
     font-size: 1.1rem;
 }
 
@@ -77,7 +83,7 @@ a:hover {
 
 #idcount {
     display: none;
-}
+}*/
 
 /*bannière avec fonction recherche*/
 .banner {
@@ -487,7 +493,7 @@ i[class="fa-solid fa-bed"] {
 }
 
 /*section footer*/
-.footer {
+/*.footer {
     background-color: #000000;
     width: auto;
     padding-bottom: 1.25rem;
@@ -592,29 +598,29 @@ i[class="fa-solid fa-bed"] {
     color: #ffffff;
     padding-bottom: 1.25rem;
     font-family: 'Open sans', sans-serif;
-}
+}*/
 
 /*menu burger*/
-#menu_burger {
+/*#menu_burger {
     position: absolute;
     right: 2%;
     display: none;
     cursor: pointer;
     
-}
+}*/
 
 /*-----------------------------------------------------------------------*/
 
 /*----------------------------------------------*/
 @media screen and (max-width: 480px) {
 
-    header {
+   /*header {
         padding-bottom: 0;
     }
 
     .logo {
         margin-left: 0.2rem;
-    }
+    }*/
 
     /*bannière avec fonction recherche*/
     .banner {
@@ -758,26 +764,26 @@ i[class="fa-solid fa-bed"] {
     }
 
     /*section footer*/
-    .column2, .column3, .column4 {
+    /*.column2, .column3, .column4 {
         margin-left: 0.1rem !important;   
     }
 
     footer {
         padding-left: 0.2rem !important;
-    }
+    }*/
 
 }
 
 /*------------------------------------------*/
 @media screen and (max-width: 576px) {
 
-    .auth {
+    /*.auth {
         display: none;
     }
 
     header {
         padding-bottom: 0;
-    }
+    }*/
 
     /*bannière avec fonction recherche*/
     .banner {
@@ -919,7 +925,7 @@ i[class="fa-solid fa-bed"] {
     }
 
     /*section footer*/
-    .footer {
+    /*.footer {
         display: inherit;
     }
 
@@ -942,7 +948,7 @@ i[class="fa-solid fa-bed"] {
 
     .column4 li span {
         font-size: 0.9rem;
-    }
+    }*/
 
 }
 
@@ -950,13 +956,13 @@ i[class="fa-solid fa-bed"] {
 
 @media screen and (max-width: 768px) {
 
-    .auth {
+    /*.auth {
         display: none;
     }
 
     header {
         padding-bottom: 0;
-    }
+    }*/
 
     /*bannière avec fonction recherche*/
     .banner {
@@ -1093,7 +1099,7 @@ i[class="fa-solid fa-bed"] {
     }
 
     /*section footer*/
-    .footer {
+    /*.footer {
         display: inherit;
     }
 
@@ -1184,7 +1190,7 @@ i[class="fa-solid fa-bed"] {
 
     nav.active ul {
         left: 0;
-    }
+    }*/
 
 }
 
@@ -1192,9 +1198,9 @@ i[class="fa-solid fa-bed"] {
 @media screen and (max-width: 992px) {
      
     /*header : logo et menu*/
-     header ul {
+     /*header ul {
         padding-left: 0;
-    }
+    }*/
 
     /*bannière avec fonction recherche*/
 
@@ -1298,9 +1304,9 @@ i[class="fa-solid fa-bed"] {
 @media screen and (max-width: 1200px) {
      
     /*header : logo et menu*/
-    header ul {
+    /*header ul {
         padding-left: 0;
-    }
+    }*/
 
     /*bannière avec fonction recherche*/
     .menu_search_deco {
