--- a/asset/css/contact.css
+++ b/asset/css/contact.css
@@ -1,4 +1,4 @@
-/*header commun
+/*common header 
 
 @font-face {
     font-family: "baloo2";
@@ -151,16 +151,16 @@ h1 {
     padding: 0 1.25rem;
 } 
  
-.subject, #subject-selected, #message, #submit {
+.form2 {
     display: block;
-    justify-content: end;
+    /*float: right;*/
 }
 
 .subject {
     background-color: #b1f3bc;
     height: 1rem;
     width: 30rem;
-   /* margin-right: 62%;*/
+    margin-right: 62%;
     padding-bottom: 2%;
 }
 
@@ -448,7 +448,7 @@ button {
 
 
    
-/*footer commun
+/*common footer 
 
 footer {
     background-color: #1f1f1f;
