--- a/asset/css/contact.css
+++ b/asset/css/contact.css
@@ -151,16 +151,16 @@ h1 {
     padding: 0 1.25rem;
 } 
  
-.form2 {
+.form2, #submit {
     display: block;
-    /*float: right;*/
+    position: relative;
 }
 
 .subject {
     background-color: #b1f3bc;
     height: 1rem;
     width: 30rem;
-    margin-right: 62%;
+    /*margin-right: 62%;*/
     padding-bottom: 2%;
 }
 
