--- a/asset/css/page.css
+++ b/asset/css/page.css
@@ -1,19 +1,21 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat:400,800');
+ @import url('https://fonts.googleapis.com/css?family=Montserrat:400,800');
 
 * {
-  box-sizing: border-box;
+  padding:0;
+    margin: 0;
+    font-family:sans-serif ;
+    box-sizing: border-box ;
 }
 
-body {
+ body {
   background: #f6f5f7;
-  display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   font-family: 'Montserrat', sans-serif;
-  height: 100vh;
-  margin: -20px 0 50px;
-}
+  height:100vh; 
+ 
+} 
 
 h1 {
   font-weight: bold;
@@ -69,7 +71,7 @@ button.ghost {
   border-color: #FFFFFF;
 }
 
-form {
+ form {
   background-color: #FFFFFF;
   display: flex;
   align-items: center;
@@ -78,7 +80,7 @@ form {
   padding: 0 50px;
   height: 100%;
   text-align: center;
-}
+} 
 
 input {
   background-color: #eee;
@@ -95,7 +97,7 @@ input {
       0 10px 10px rgba(0,0,0,0.22);
   position: relative;
   overflow: hidden;
-  width: 768px;
+  width: 900px;
   max-width: 100%;
   min-height: 480px;
 }
@@ -223,30 +225,6 @@ input {
   margin: 0 5px;
   height: 40px;
   width: 40px;
-}
+}   
 
-footer {
-    background-color: #222;
-    color: #fff;
-    font-size: 14px;
-    bottom: 0;
-    position: fixed;
-    left: 0;
-    right: 0;
-    text-align: center;
-    z-index: 999;
-}
-
-footer p {
-    margin: 10px 0;
-}
-
-footer i {
-    color: red;
-}
-
-footer a {
-    color: #3c97bf;
-    text-decoration: none;
-}
 
