--- a/asset/css/buy.css
+++ b/asset/css/buy.css
@@ -23,6 +23,7 @@ h1{
     font-size: 5rem;
     padding-top: 6rem;
     padding-bottom: 6rem;
+    filter: drop-shadow(0 -6mm 4mm rgb(8, 7, 8));
 }
 
 
