--- a/vue/css/contact.css
+++ b/vue/css/contact.css
@@ -153,7 +153,7 @@ h1 {
     display: inline-block;
     padding-left: 0.5rem;
     width: 40%;
-    vertical-align: top;*/
+    vertical-align: top;
 }
 
 /* code à tester*/
