--- a/vue/css/page.css
+++ b/vue/css/page.css
@@ -9,11 +9,13 @@
 
  body {
   background: #f6f5f7;
-  justify-content: center;
-  align-items: center;
+  display: flex;
+  justify-content: flex-start;
+  
   flex-direction: column;
   font-family: 'Montserrat', sans-serif;
   height:100vh; 
+  width: 100%;
  
 } 
 
@@ -92,6 +94,7 @@ input {
 
 .container {
   background-color: #fff;
+  align-self: center;
   border-radius: 10px;
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 
       0 10px 10px rgba(0,0,0,0.22);
@@ -100,6 +103,7 @@ input {
   width: 900px;
   max-width: 100%;
   min-height: 480px;
+  padding: 20rem  38rem;
 }
 
 .form-container {
@@ -226,5 +230,11 @@ input {
   height: 40px;
   width: 40px;
 }   
+
+
+@media all and (max-width: 1200px) {
+  
+  
+}
 
 
